...
        android:layout_width="match_parent"
        android:layout_height="1dp" />

    <com.devspark.robototextview.widget.RobotoButton
        app:fontFamily="roboto"
        app:textWeight="medium"
        android:id="@+id/navigation_drawer_footer_people"
        style="@style/navigation_drawer_footer"
        android:onClick="navigationDrawerFooterClick"
        android:drawableLeft="@drawable/ic_people"
        android:drawableStart="@drawable/ic_people"
        android:text="@string/manage_people"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"    />

    <com.devspark.robototextview.widget.RobotoButton
        app:fontFamily="roboto"
        app:textWeight="medium"
        android:id="@+id/navigation_drawer_footer_settings"
        style="@style/navigation_drawer_footer"
        android:onClick="navigationDrawerFooterClick"
        android:drawableLeft="@drawable/ic_settings_cog"
        android:drawableStart="@drawable/ic_settings_cog"
        android:text="@string/pref_settings"
        android:layout_width="match_parent"
...
