...

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <android.support.v7.widget.RecyclerView
                android:id="@+id/people_recycler_view"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:dividerHeight="0dp"
                android:paddingTop="40dp"
                android:clipToPadding="false"
                style="@style/FeedRecyclerView"
...

        </FrameLayout>

    </LinearLayout>

    <android.support.design.widget.FloatingActionButton
        android:id="@+id/people_fab"
        app:fabSize="normal"
        app:borderWidth="0dp"
        app:elevation="6dp"
        app:pressedTranslationZ="12dp"
        app:backgroundTint="@color/accent_color"
        app:rippleColor="#66ffffff"
...
