<android.support.v4.widget.DrawerLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/drawer_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.johnsimon.payback.ui.FeedActivity">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        
        <View
            android:id="@+id/feed_activity_status_bar_pusher"
            android:background="@color/primary_color"
            android:layout_width="match_parent"
            android:layout_height="25dp"    />

        <include
            layout="@layout/toolbar"    />

        <FrameLayout
            tools:layout="@layout/fragment_feed"
            android:id="@+id/container"
            android:layout_width="match_parent"
            android:layout_height="match_parent" />

    </LinearLayout>

    <fragment
        style="@style/Elevation4DP"
        android:id="@+id/navigation_drawer"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_gravity="left"
        android:name="com.johnsimon.payback.ui.fragment.NavigationDrawerFragment"
        tools:layout="@layout/fragment_navigation_drawer" />

</android.support.v4.widget.DrawerLayout>